--- a/.gitmodules
+++ b/.gitmodules
@@ -5,8 +5,8 @@
 	path = ng-forms-aio
 	url = git@github.com:mylabz-xyz/ng-forms-aio.git
 [submodule "react-forms-aio"]
-	path = ng-forms-aio
+	path = react-forms-aio
 	url = git@github.com:mylabz-xyz/react-forms-aio.git
 [submodule "svelte-forms-aio"]
-	path = ng-forms-aio
+	path = svelte-forms-aio
 	url = git@github.com:mylabz-xyz/svelte-forms-aio.git
